# SGDK2-CPP

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  build_lib.bat  common.mk  install_sgdk_mingw.bat  install_sgdk_unix.sh  makefile.gen  makelib.gen  md.ld  readme.md
boot/: rom_head.c.in  sega.s
cmake/: CMakeGamePresets.json  SGDKConfig.cmake.in  SGDKFindSGDKPaths.cmake.in  SGDKFindWindowsToolchain.cmake  SGDKFindWindowsToolchain.cmake.in  SGDKSupport.cmake  SGDKSupport_Private.cmake  SGDKSupport_RomProperties.cmake  SGDKSupport_RomTargets.cmake  SGDKSupport_Sources.cmake  SGDKToolchain.cmake  SGDKToolchainGNU.cmake
cmake/Support/: GenerateRomHead.cmake  RomProperties.cmake  RomTargets.cmake  Sources.cmake
cmake/Toolchain/: SGDKToolchain.cmake  SGDKToolchainClang.cmake  SGDKToolchainGNU.cmake
cmake/dev/: WriteEmbedHeader.cmake
inc/: asm.h  bmp.h  config.h  font.h  genesis.h  joy.h  kdebug.h  maths.h  maths3D.h  memory.h  psg.h  sprite_eng.h  sram.h  str.h  string.h  sys.h  tab_cnv.h  timer.h  tools.h  types.h  vdp.h  vdp_bg.h  vdp_spr.h  vdp_tile.h  ym2612.h  z80_ctrl.h
inc/SGDK/: asm.h  bmp.h  config.h  dma.h  font.h  genesis.h  joy.h  kdebug.h  map.h  mapper.h  maths.h  maths3D.h  memory.h  memory_base.h  object.h  pal.h  pool.h  psg.h  sprite_eng.h  sprite_eng_legacy.h  sram.h  str.h  sys.h  tab_cnv.h  task.h  task_cst.h  timer.h  tools.h  types.h  vdp.h  vdp_bg.h  vdp_pal.h  vdp_spr.h  vdp_tile.h  vram.h  ym2612.h  z80_ctrl.h
inc/SGDK/ext/: console.h  fat16.h
inc/SGDK/ext/flash-save/: flash.h  saveman.h
inc/SGDK/ext/minimusic/: minimus.h
inc/SGDK/ext/mw/: 16c550.h  gamejolt.h  jsmn.h  json.h  lsd.h  megawifi.h  mw-msg.h  ssf.h
inc/SGDK/snd/: smp_null.h  smp_null_dpcm.h  sound.h  xgm.h  xgm2.h
inc/SGDK/snd/pcm/: snd_pcm.h  snd_pcm4.h  tab_vol.h
inc/ext/: console.h  everdrive.h
inc/ext/flash-save/: flash.h  saveman.h
inc/ext/minimusic/: minimus.h
inc/ext/mw/: 16c550.h  gamejolt.h  jsmn.h  json.h  lsd.h  megawifi.h  mw-msg.h  ssf.h
inc/snd/pcm/: snd_dpcm2.h  snd_pcm.h  snd_pcm4.h
m68k-elf-toolchain/lib/: libctf-nobfd.la  libctf.la  libsframe.la
m68k-elf-toolchain/lib/gcc/m68k-elf/15.1.0/install-tools/: mkheaders.conf
m68k-elf-toolchain/libexec/gcc/m68k-elf/15.1.0/: liblto_plugin.la
m68k-elf-toolchain/libexec/gcc/m68k-elf/15.1.0/install-tools/: mkheaders
m68k-elf-toolchain/m68k-elf/include/: newlib.h
m68k-elf-toolchain/m68k-elf/include/c++/15.1.0/bits/: std.cc
m68k-elf-toolchain/m68k-elf/include/c++/15.1.0/m68k-elf/bits/: c++config.h
m68k-elf-toolchain/m68k-elf/lib/: libstdc++.a-gdb.py  libstdc++.la  libstdc++exp.la  libsupc++.la
m68k-elf-toolchain/m68k-elf/lib/ldscripts/: m68kelf.x  m68kelf.xbn  m68kelf.xc  m68kelf.xce  m68kelf.xcer  m68kelf.xd  m68kelf.xdc  m68kelf.xdce  m68kelf.xdcer  m68kelf.xde  m68kelf.xder  m68kelf.xdw  m68kelf.xdwe  m68kelf.xdwer  m68kelf.xe  m68kelf.xer  m68kelf.xn  m68kelf.xs  m68kelf.xsc  m68kelf.xsce  m68kelf.xscer  m68kelf.xse  m68kelf.xser  m68kelf.xsw  m68kelf.xswe  m68kelf.xswer  m68kelf.xw  m68kelf.xwe  m68kelf.xwer
m68k-elf-toolchain/share/info/: bfd.info  dir  gcc.info  gccinstall.info  gccint.info
m68k-elf-toolchain/share/man/man1/: m68k-elf-addr2line.1  m68k-elf-ar.1  m68k-elf-as.1  m68k-elf-c++filt.1  m68k-elf-dlltool.1  m68k-elf-elfedit.1  m68k-elf-nm.1  m68k-elf-objcopy.1  m68k-elf-objdump.1  m68k-elf-ranlib.1  m68k-elf-readelf.1  m68k-elf-size.1  m68k-elf-strings.1  m68k-elf-strip.1  m68k-elf-windmc.1  m68k-elf-windres.1
project/template/inc/: funcs.h
project/template/src/: main.c
project/template/src/boot/: rom_head.c
sample/advanced/sprites-sharing-tiles/src/: main.c
sample/advanced/tile-animation/src/: main.c
sample/basics/hello-world/: CMakeLists.txt  CMakePresets.json
sample/basics/hello-world/src/: main.c
sample/basics/image/src/: main.c
sample/basics/image/src/boot/: rom_head.c
sample/basics/pools/src/: main.c
sample/benchmark/src/: bg_test.c  bmp_test.c  math_test.c  spr_test.c
sample/bitmap/partic/src/: main.c
sample/demo/starfield-donut/src/: main.c
sample/flash-save/src/: main.c
sample/fx/h-int/scaling/src/boot/: rom_head.c
sample/fx/sprite-masking/src/: main.c
sample/game/platformer/src/: main.c
sample/game/sonic/src/: main.c
sample/megawifi/basic/src/: main.c
sample/megawifi/basic/src/boot/: rom_head.c
sample/megawifi/menu/src/: main.c
sample/snd/xgm-player/src/: main.c
sample/sys/multitasking/src/: main.c
src/: bmp.c  joy.c  maths.c  memory.c  pal.c  sprite_eng.c  sprite_eng_legacy.c  str.c  sys.c  timer.c  tools.c  tools_a.s  vdp.c  vdp_bg.c  vdp_spr.c
src/boot/: rom_head.c  todo remove this.txt
src/cpp/: cplusplus.cpp
src/ext/cppsupport/: syscalls.c
src/ext/mw/: gamejolt.c  json.c  lsd.c  megawifi.c
src/snd/: xgm.c
src/snd/pcm/: snd_pcm.c  snd_pcm4.c
tools/rescomp/src/sgdk/rescomp/: Compiler.java
